--- a/hw1/MainWindow.xaml
+++ b/hw1/MainWindow.xaml
@@ -7,31 +7,73 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
+        <TabControl Margin="8">
+            <TabItem Header="Куб и Шар">
+                <Grid Margin="10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="150"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
 
-        <TextBlock FontFamily="Comic Sans MS" FontSize="14" Margin="20,0,0,0" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Ребро куба A:</TextBlock>
-        <TextBox FontFamily="Comic Sans MS" FontSize="18" Grid.Row="0" Grid.Column="1" Name="TextBoxA" Height="36" Width="220" Margin="0,10,0,5" HorizontalAlignment="Left"/>
+                    <TextBlock FontFamily="Comic Sans MS" FontSize="14" Margin="0,6,0,0" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Ребро куба A:</TextBlock>
+                    <TextBox FontFamily="Comic Sans MS" FontSize="18" Grid.Row="0" Grid.Column="1" Name="TextBoxA" Height="36" Width="220" Margin="0,6,0,6" HorizontalAlignment="Left"/>
 
-        <TextBlock FontFamily="Comic Sans MS" FontSize="14" Margin="20,0,0,0" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">Радиус шара R:</TextBlock>
-        <TextBox FontFamily="Comic Sans MS" FontSize="18" Grid.Row="1" Grid.Column="1" Name="TextBoxR" Height="36" Width="220" Margin="0,5,0,5" HorizontalAlignment="Left"/>
+                    <TextBlock FontFamily="Comic Sans MS" FontSize="14" Margin="0,6,0,0" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">Радиус шара R:</TextBlock>
+                    <TextBox FontFamily="Comic Sans MS" FontSize="18" Grid.Row="1" Grid.Column="1" Name="TextBoxR" Height="36" Width="220" Margin="0,6,0,6" HorizontalAlignment="Left"/>
 
-        <Button Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2"  
-                Height="40" Width="220" Margin="0,5,0,10"
-                HorizontalAlignment="Left" Background="#007FFF"
-                Click="CalculateButton_Click">
-            <TextBlock Foreground="White" FontFamily="Comic Sans MS" FontSize="18" FontWeight="SemiBold" HorizontalAlignment="Center">Вычислить</TextBlock>
-        </Button>
+                    <Button Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2"
+                            Height="40" Width="220" Margin="0,6,0,6"
+                            HorizontalAlignment="Left" Background="#007FFF"
+                            Click="CalculateButton_Click">
+                        <TextBlock Foreground="White" FontFamily="Comic Sans MS" FontSize="18" FontWeight="SemiBold" HorizontalAlignment="Center">Вычислить</TextBlock>
+                    </Button>
 
-        <TextBlock FontFamily="Comic Sans MS" FontSize="18" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Height="49" Name="ResultTextBlock" TextWrapping="Wrap"/>
+                    <TextBlock FontFamily="Comic Sans MS" FontSize="16" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Height="90" Name="ResultTextBlock" TextWrapping="Wrap" Margin="0,6,0,6"/>
+
+                    <TextBlock Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" FontSize="12" Foreground="Gray" TextWrapping="Wrap">
+                        Примеры ввода: числа ("3.5"), выражения с Pi ("2*Pi/3", "PI"), или простые выражения ("1+2*3").
+                    </TextBlock>
+                </Grid>
+            </TabItem>
+
+            <TabItem Header="Дипломы">
+                <Grid Margin="10">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <StackPanel Orientation="Horizontal" Grid.Row="0" Margin="0,0,0,10">
+                        <Button Name="GenerateButton" Click="GenerateButton_Click" Margin="0,0,8,0" Padding="8,6">Сгенерировать</Button>
+                        <Button Name="SaveButton" Click="SaveButton_Click" Margin="0,0,8,0" Padding="8,6">Сохранить (students.json)</Button>
+                        <Button Name="LoadButton" Click="LoadButton_Click" Margin="0,0,8,0" Padding="8,6">Загрузить (students.json)</Button>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="0,0,0,10" VerticalAlignment="Center">
+                        <TextBlock VerticalAlignment="Center" Margin="0,0,6,0">Группа:</TextBlock>
+                        <TextBox Name="GroupFilterTextBox" Width="120" Margin="0,0,12,0"/>
+                        <TextBlock VerticalAlignment="Center" Margin="0,0,6,0">Оценка:</TextBlock>
+                        <TextBox Name="GradeFilterTextBox" Width="60" Margin="0,0,12,0"/>
+                        <Button Click="FilterButton_Click" Padding="8,6">Фильтровать</Button>
+                        <Button Click="ClearFilterButton_Click" Padding="8,6" Margin="8,0,0,0">Сброс фильтра</Button>
+                    </StackPanel>
+                    
+                    <DataGrid Name="StudentsDataGrid" Grid.Row="2" AutoGenerateColumns="True" IsReadOnly="True" />
+
+                    <TextBlock Name="FilterResultTextBlock" Grid.Row="3" Margin="0,8,0,0" Foreground="DarkBlue"/>
+                </Grid>
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
